--- a/custom_components/xjx_toilet_pro/manifest.json
+++ b/custom_components/xjx_toilet_pro/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "xjx_toilet_pro",
   "name": "Xiaomi Mijia Whale Smart Toilet Cover",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "documentation": "https://github.com/tykarol/home-assistant-xjx-toilet-pro",
   "requirements": [
-    "python-miio==0.5.4"
+    "python-miio>=0.5.4"
   ],
   "dependencies": [],
   "codeowners": ["@tykarol"],
