--- a/custom_components/xjx_toilet_pro/manifest.json
+++ b/custom_components/xjx_toilet_pro/manifest.json
@@ -8,5 +8,6 @@
   ],
   "dependencies": [],
   "codeowners": ["@tykarol"],
-  "config_flow": false
+  "config_flow": false,
+  "iot_class": "local_polling"
 }
